feat: Implement reservation and payment services with inter-service communication and database schema.